--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="font-nido antialiased scroll-smooth">
+  <body class="font-nido antialiased scroll-smooth bg-[#c8e6f0] dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
     <app-root></app-root>
   </body>
 </html>
