--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es-ES">
   <head>
     <meta charset="utf-8" />
-    <title>Todoapp</title>
+    <title>Nido</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="nido.ico" />
