Diseño de Landing y Logotipo
Últimos ajustes sobre el diseño de la landing, ajustes de logotipo e isotipo en landing, favicon y páginas de mensajes.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,7 @@
     <title>Nido</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="nido.ico" />
+    <link rel="icon" type="image/x-icon" href="nido_fav-02.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +13,9 @@
       rel="stylesheet"
     />
   </head>
-  <body class="font-nido antialiased scroll-smooth bg-[#c8e6f0] dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
+  <body
+    class="font-nido antialiased scroll-smooth bg-[#c8e6f0] dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300"
+  >
     <app-root></app-root>
   </body>
 </html>
