Estilo del header
He modificado el estilo del header para que todo tenga más coherencia.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body
-    class="font-nido antialiased scroll-smooth bg-[#c8e6f0] dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300"
+    class="font-nido antialiased scroll-smooth bg-neutral-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300"
   >
     <app-root></app-root>
   </body>
